# jmap-client

./: .gitignore  BLOB.md  CALENDARS.md  CHANGELOG.md  CLAUDE.md  CONTACTS.md  Cargo.toml  QUOTA.md  README.md  REVIEW-1.md  REVIEW-2.md  ROADMAP.md  TODO.md
examples/: eventsource.rs  mailboxes.rs  messages.rs  result_reference.rs  websocket.rs
plans/: ARCHITECTURE.md  MDN.md  SHARING.md  SMIME.md
src/: account.rs  client.rs  client_ws.rs  lib.rs  tests.rs  transport_reqwest.rs
src/address_book/: get.rs  helpers.rs  mod.rs  set.rs
src/blob/: copy.rs  download.rs  helpers.rs  manage.rs  mod.rs  upload.rs
src/calendar/: get.rs  helpers.rs  mod.rs  set.rs
src/calendar_event/: get.rs  helpers.rs  mod.rs  parse.rs  query.rs  set.rs
src/calendar_event_notification/: get.rs  helpers.rs  mod.rs  query.rs  set.rs
src/contact_card/: get.rs  helpers.rs  mod.rs  parse.rs  query.rs  set.rs
src/core/: capability.rs  changes.rs  copy.rs  error.rs  field.rs  get.rs  id.rs  method.rs  mod.rs  parse.rs  query.rs  query_changes.rs  request.rs  response.rs  session.rs  set.rs  tests.rs  transport.rs
src/email/: get.rs  helpers.rs  import.rs  mod.rs  parse.rs  query.rs  search_snippet.rs  set.rs
src/email_submission/: get.rs  helpers.rs  mod.rs  query.rs  set.rs
src/event_source/: mod.rs  parser.rs  stream.rs
src/identity/: get.rs  helpers.rs  mod.rs  set.rs
src/mailbox/: get.rs  helpers.rs  mod.rs  query.rs  set.rs
src/participant_identity/: get.rs  helpers.rs  mod.rs  set.rs
src/principal/: availability.rs  get.rs  helpers.rs  mod.rs  query.rs  set.rs
src/push_subscription/: get.rs  helpers.rs  mod.rs  set.rs
src/quota/: get.rs  helpers.rs  mod.rs  query.rs
src/share_notification/: get.rs  helpers.rs  mod.rs  query.rs  set.rs
src/sieve/: get.rs  helpers.rs  mod.rs  query.rs  set.rs  validate.rs
src/thread/: helpers.rs  mod.rs
src/vacation_response/: get.rs  helpers.rs  mod.rs  set.rs
