[package]
name = "jmap-client"
description = "JMAP client library for Rust"
version = "0.5.0"
edition = "2024"
authors = [ "Stalwart Labs LLC <hello@stalw.art>", "folk@folk.wtf" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/folknor/jmap-client"
homepage = "https://github.com/folknor/jmap-client"
keywords = ["jmap", "email", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"
resolver = "2"
rust-version = "1.92"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"]}
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"], optional = true}
tokio = { version = "1.47", default-features = false, features = ["io-util"], optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }
futures-util = "0.3"
async-stream = "0.3"
rustls-pki-types = { version = "1" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
ahash = {version = "0.8", features = ["serde"]}
parking_lot = "0.12"
base64 = "0.13"

[features]
default = ["websockets", "mail", "calendars", "contacts", "blob", "quota"]
websockets = ["tokio", "tokio-tungstenite", "rustls"]
debug = []
# Protocol extension features — disable to reduce compile time
mail = []
calendars = []
contacts = []
blob = []
quota = []

[lib]
doctest = false

[profile.bench]
debug = true
