[package]
name = "jmap-client"
description = "JMAP client library for Rust"
version = "0.5.0"
edition = "2024"
authors = [ "Stalwart Labs LLC <hello@stalw.art>", "folk@folk.wtf" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/folknor/jmap-client"
homepage = "https://github.com/folknor/jmap-client"
keywords = ["jmap", "email", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"
resolver = "2"
rust-version = "1.92"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"]}
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"], optional = true}
tokio = { version = "1.47", default-features = false, features = ["io-util"], optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring"] }
futures-util = "0.3"
async-stream = "0.3"
rustls-pki-types = { version = "1" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
base64 = "0.22"

[features]
default = ["websockets", "mail", "calendars", "contacts", "blob", "quota"]
websockets = ["tokio", "tokio-tungstenite", "rustls"]
mail = []
calendars = []
contacts = []
blob = []
quota = []
debug = []

[lints.clippy]
# Style: modern idiomatic Rust
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
# Safety: strict error handling
unwrap_in_result = "deny"
ok_expect = "deny"
# Async safety
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
# Type safety
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
# Safety: no debug/placeholder code
dbg_macro = "deny"
todo = "deny"

[lib]
doctest = false

[profile.bench]
debug = true
